LDX /update
Ahora funciona epicamente y con logs